Fix spacing title intro in project details

--- a/src/components/projectDetail.module.scss
+++ b/src/components/projectDetail.module.scss
@@ -36,7 +36,7 @@
 }
 
 .title {
-  margin-bottom: 1.2931578947em;
+  margin-bottom: 1em;
 }
 
 .intro {
@@ -123,17 +123,25 @@
   .intro,
   .text {
     max-width: 60rem;
-    margin: 8vw auto;
   }
 
   .title,
   .intro {
     font-size: var(--font-large);
+    margin: 1em auto;
   }
 
   .text,
   .credits {
     font-size: 1.7rem;
+  }
+
+  .intro {
+    margin: 1em auto 8vw auto;
+  }
+
+  .text {
+    margin: 8vw auto;
   }
 
   .credits {
